--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
 	<title>Nina Carducci : Photographe Professionnelle à Bordeaux</title>
 	<meta name="description" content="Découvrez le travail de Nina Carducci, photographe professionnelle spécialisée dans les mariages, portraits et événements. Basée à Bordeaux je capture vos plus beaux moments avec authenticité et émotion.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "LocalBusiness",
+			"name": "Nina Carducci",
+			"image": "https://www.nina-carducci.com/assets/images/nina.webp",
+			"url": "https://www.nina-carducci.com/",
+			"description": "Nina Carducci est une photographe professionnelle spécialisée dans les mariages, portraits et événements à Bordeaux.",
+			"telephone": "+33 5 56 67 78 89",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"addressCountry": "FR"
+			},
+			"openingHours": "Mo-Fr 10:00-19:00",
+			"priceRange": "€€",
+			"sameAs": [
+				"https://www.instagram.com/ninacarducci.photo",
+				"https://www.facebook.com/ninacarducci"
+			]
+		}
+		</script>
+	  <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+<meta property="og:site_name" content="Nina Carducci - Photographe à Bordeaux">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.nina-carducci.com">
+<meta property="og:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
+<meta property="og:description" content="Spécialisée en mariages, portraits et événements, Nina capture vos plus beaux moments avec authenticité et émotion.">
+<meta property="og:image" content="https://www.nina-carducci.com/assets/images/nina.webp">
+<meta property="og:locale" content="fr_FR">
+
+<!-- Twitter Cards -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@ninacarducci">
+<meta name="twitter:title" content="Nina Carducci - Photographe à Bordeaux">
+<meta name="twitter:description" content="Spécialisée en mariages, portraits et événements, Nina capture vos plus beaux moments avec authenticité et émotion.">
+<meta name="twitter:image" content="https://www.nina-carducci.com/assets/images/nina.webp">
+<meta name="twitter:url" content="https://www.nina-carducci.com">
 	<link rel="preload" as="image" href="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" fetchpriority="high">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/style.purged.css">
+	<link rel="stylesheet" href="assets/style.purged.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
@@ -16,19 +56,25 @@
 	<script src="./assets/maugallery.min.js" defer></script>
 	<script src="./assets/scripts.min.js" defer></script>
 </head>
+
+
 <body>
-<header>
-	<h1 class="name">Nina Carducci</h1>
-	<div class="nav">   
-		<ul>
-			<li><a href="#about">À propos</a></li>
-			<li><a href="#gallery">Galerie</a></li>
-			<li><a href="#services">Service</a></li>
-			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt=""></a></li>
-		</ul>
-	</div>
-</header>
+	<header>
+		<h1 class="name">Nina Carducci</h1>
+		<nav class="nav">   
+			<ul>
+				<li><a href="#about">À propos</a></li>
+				<li><a href="#gallery">Galerie</a></li>
+				<li><a href="#services">Service</a></li>
+				<li><a href="#contact">Contact</a></li>
+				<li>
+					<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" aria-label="Profil Instagram de Nina Carducci">
+						<img src="assets/images/instagram.png" alt="Logo Instagram">
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 <div id="Carousel">
 
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -50,11 +96,12 @@
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Previous</span>
+			<span class="visually-hidden">Précédent</span>
 		</button>
+		
 		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Next</span>
+			<span class="visually-hidden">Suivant</span>
 		</button>
 	</div>
 </div>
@@ -128,7 +175,7 @@
 				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
 			</div>
 			<div class="service__price">
-				<h4>350€/demi journée</h4>
+				<p class="price" aria-label="Prix : 350 euros pour une demi-journée">350€/demi journée</p>
 				<span>Matériel, déplacement inclus</span>
 			</div>
 
@@ -139,7 +186,7 @@
 				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
 			</div>
 			<div class="service__price">
-				<h4>50€/photo</h4>
+				<p class="price" aria-label="Prix : 350 euros pour une demi-journée">50€/photo</p>
 				<span>2 AR par photo</span>
 			</div>
 		</div>
@@ -149,7 +196,7 @@
 				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
 			</div>
 			<div class="service__price">
-				<h4>400€ album A4</h4>
+				<p class="price" aria-label="Prix : 400 euros pour un album A4">400€ album A4</p>
 				<span>30 pages recto/verso</span>
 			</div>
 		</div>
@@ -169,13 +216,16 @@
 			<h3>Une question ? Une demande de devis ?</h3>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 			<form action="" method="post">
-				<label>Nom</label>
-				<input type="text" name="nom" id="nom">
-				<label>Email</label>
-				<input type="email" name="email" id="email">
-				<label>Message</label>
-				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
+				<label for="nom">Nom</label>
+				<input type="text" name="nom" id="nom" required>
+			
+				<label for="email">Email</label>
+				<input type="email" name="email" id="email" required>
+			
+				<label for="message">Message</label>
+				<textarea name="message" id="message" cols="30" rows="10" required></textarea>
+			
+				<input type="submit" value="Envoyer" aria-label="Envoyer le formulaire">
 			</form>
 		</div>
 		<div class="picture right">
@@ -183,5 +233,23 @@
 		</div>
 	</div>
 </div>
+<footer>
+    <div class="container">
+        <p>&copy; 2024 Nina Carducci - Tous droits réservés</p>
+        <nav>
+            <ul>
+                <li><a href="#about">À propos</a></li>
+                <li><a href="#gallery">Galerie</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="social-links">
+            <a href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" aria-label="Profil Instagram de Nina Carducci">
+                <img src="assets/images/instagram.png" alt="Instagram">
+            </a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
